--- a/.github/workflows/beta-test-action.yml
+++ b/.github/workflows/beta-test-action.yml
@@ -16,5 +16,6 @@ jobs:
         with:
           node-version: ${{ matrix.node }}
       - run: cd packages/core/
+      - run: pwd
       - run: npm i
-      - run: npm run build:prod --env PUBLIC_HOST=https://abc.com/brizzy
+      - run: npm run build:prod -- --env PUBLIC_HOST=https://abc.com/brizzy
