--- a/.github/workflows/beta-test-action.yml
+++ b/.github/workflows/beta-test-action.yml
@@ -5,6 +5,9 @@ on:
 jobs:
   build:
     runs-on:  ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./packages/core
     strategy:
       matrix:
         node: [ 18 ]
