--- a/.github/workflows/beta-test-action.yml
+++ b/.github/workflows/beta-test-action.yml
@@ -20,4 +20,8 @@ jobs:
           node-version: ${{ matrix.node }}
       - run: pwd
       - run: npm i
-      - run: npm run build:prod -- --env PUBLIC_HOST=https://abc.com/brizzy
+      - run: npm run build:prod -- --env PUBLIC_HOST=${{ vars.CDN_PATH }}/${{ vars.BUCKET_NAME }}
+      - name: Upload build to S3
+      - run: ls
+        
+      # copy
